# complex_systems_talks

./: bifurcations.ipynb  pendlum.ipynb  predator_prey.ipynb  pyproject.toml
