[tool.poetry]
name = "complex-systems"
version = "0.1.0"
description = ""
authors = ["Erik Biederstadt <biederstadterik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.26.0"
scipy = "^1.11.2"
matplotlib = "^3.8.0"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
